# egl-offscreen-render

./: .gitignore  README.md  log_settings.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
gl_offscreen/: gl_utils.py  off_screen_render.py  shaders.py
log_set/: __init__.py  utc_formatter.py
